dataset1235/2025-2/805158916/users/1651421245/executions/2118643220_2011582555.log
== RUN (2025-09-01 14:18:33)
-- CODE: 
from math import *

# faça seu código aqui!
c = int(input("valor do comprimento do lado do hexágono:"))
apotema = c/2*tan(.pi/6)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 5
    apotema = c/2*tan(.pi/6)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 5
    apotema = c/2*tan(.pi/6)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 5
    apotema = c/2*tan(.pi/6)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 5
    apotema = c/2*tan(.pi/6)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 5
    apotema = c/2*tan(.pi/6)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 5
    apotema = c/2*tan(.pi/6)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:14:39)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("valor do comprimento do lado do hexágono:"))
apotema = lado/2*(tan(pi/3))
area = 3*lado*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
valor do comprimento do lado do hexágono:127.31
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
valor do comprimento do lado do hexágono:64.95
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
valor do comprimento do lado do hexágono:41.57
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
valor do comprimento do lado do hexágono:93.53
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
valor do comprimento do lado do hexágono:23.38
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
valor do comprimento do lado do hexágono:166.28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:15:38)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("valor do comprimento do lado do hexágono:"))
apotema = lado/2*(tan(pi/3))
area = 3*lado*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
valor do comprimento do lado do hexágono:127.31
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
valor do comprimento do lado do hexágono:64.95
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
valor do comprimento do lado do hexágono:41.57
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
valor do comprimento do lado do hexágono:93.53
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
valor do comprimento do lado do hexágono:23.38
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
valor do comprimento do lado do hexágono:166.28
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:36:57)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("valor do comprimento do lado do hexágono:"))
apotema = lado/2*(tan (pi/6))
area = 3*lado*apotema
print(round(area))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
valor do comprimento do lado do hexágono:42
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
valor do comprimento do lado do hexágono:22
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
valor do comprimento do lado do hexágono:14
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
valor do comprimento do lado do hexágono:31
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
valor do comprimento do lado do hexágono:8
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
valor do comprimento do lado do hexágono:55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:24:33)
-- CODE: 
from math import *

# faça seu código aqui!
c = int(input("valor do comprimento do lado do hexágono:"))
apotema = c/2*(tan (pi/6))
area = 3*c*(apotema)
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
valor do comprimento do lado do hexágono:42.44
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
valor do comprimento do lado do hexágono:21.65
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
valor do comprimento do lado do hexágono:13.86
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
valor do comprimento do lado do hexágono:31.18
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
valor do comprimento do lado do hexágono:7.79
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
valor do comprimento do lado do hexágono:55.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:23:27)
-- CODE: 
from math import *

# faça seu código aqui!
c = int(input("valor do comprimento do lado do hexágono:"))
apotema = c/2*(tan pi/6)
area = 3*c*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 5
    apotema = c/2*(tan pi/6)
                   ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 5
    apotema = c/2*(tan pi/6)
                   ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 5
    apotema = c/2*(tan pi/6)
                   ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 5
    apotema = c/2*(tan pi/6)
                   ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 5
    apotema = c/2*(tan pi/6)
                   ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 5
    apotema = c/2*(tan pi/6)
                   ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
